This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
===========================================================================
10/22/17: Prevented DE camera FPS value from being put in wrong camera's
parameters (In 3.6).

10/21/17: Added a task to take multiple Record shots in a hole with image
shift, a script command to run the task, an option to draw the pattern of
shots when showing the Acquire area in Navigator, and a dialog to set the
parameters for the task and for drawing.

10/21/17: Added script commands to measure beam size from beam edges in the
image, and to shift the beam by an amount in microns or as a fraction of field
size.

10/18/17: Add a property to turn off Convert Maps to Bytes by default.

10/14/17: Fixed fast continuous mode for Gatan cameras with a GIF in the
system to not stop and restart (In 3.6).

10/13/17: Fixed crash with early return from 9/17 changes.

10/11/17: Fixed method of looking up mag index from a mag value, which fixes
problems in removing IS and stage calibrations (In 3.6).

10/10/17: Fixed message boxes coming out from errors in post-exposure actions
when errors are just supposed to terminate batch tilt series or script.

10/10/17: Made the Refill long operation give a special message that it
probably completed with a misleading error.

10/9/17: Added script command to take Record and tilt to specific angle after
exposure; made RecordAndTilt... command require that post-exposure actions be
enabled, and added command to report whether they are.

10/3/17: Added script commands so that entire tilt series run by script could
be aligned in IMOD just like ones run by the Tilt Series Controller.

10/3/17: Increased timeout for blanker/post-action thread to finish when
tilting.  If the thread times out and has to be killed, it is done in a way
that releases the access to the JOEL scope.
